[package]
name = "rtrb"
version = "0.0.0"
authors = [
    "Stjepan Glavina <stjepang@gmail.com>",
    "Matthias Geier <Matthias.Geier@gmail.com>",
]
repository = "https://github.com/mgeier/rtrb"
description = "A realtime-safe single-producer single-consumer ring buffer"
categories = ["concurrency", "data-structures"]
keywords = ["lock-free", "wait-free", "spsc", "queue"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cache-padded = "1.1"

[dev-dependencies]
crossbeam-utils = "0.8"
rand = "0.7.3"
criterion = "0.3"

[lib]
bench = false # Don't disturb criterion command line parsing

[[bench]]
name = "push_and_pop"
harness = false

[[bench]]
name = "slices"
harness = false
