[package]
name = "ringbuffer-performance-comparison"
version = "0.0.0"
edition = "2021"

publish = false

[dependencies]
# We use a fork that doesn't select the since stabilized `allocator_api` feature,
# see https://github.com/polyfractal/bounded-spsc-queue/pull/22:
bounded-spsc-queue = { git = "https://github.com/knsd/bounded-spsc-queue.git", branch = "feature/stable" }
concurrent-queue = "2.3"
crossbeam-queue = "0.3"
crossbeam-queue-pr338 = { git = "https://github.com/mgeier/crossbeam", branch = "spsc", package = "crossbeam-queue" }
omango = "0.2"
ringbuf = "0.4"
rtrb = { path = ".." }

[dev-dependencies]
criterion = "0.5"

# aggressive optimization for benchmarks
[profile.bench]
lto = true
opt-level = 3
codegen-units = 1

[lib]
bench = false # Don't disturb criterion command line parsing

[[bench]]
name = "two_threads"
harness = false
